syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option cc_enable_arenas = true;
option cc_generic_services = false;

import "e2ee_protocol_msg.proto";
import "register_user_request_payload.proto";
import "delete_user_request_payload.proto";
import "get_pre_key_bundle_request_payload.proto";
import "publish_spk_request_payload.proto";
import "e2ee_message.proto";
import "create_group_request_payload.proto";
import "add_group_members_request_payload.proto";
import "remove_group_members_request_payload.proto";
import "get_group_request_payload.proto";

import "response_data.proto";
import "event_data_request.proto";
import "login_request.proto";
import "logout_request.proto";
import "connect_request.proto";

service E2EEService {
    // bidirectional streaming operations
    rpc communicate(stream skissm.e2ee_protocol_msg) returns (stream skissm.e2ee_protocol_msg) {
    }

    // server streaming operations
    rpc connect(skissm.connect_request) returns (stream skissm.e2ee_protocol_msg) {
    }

    // unary operations
    rpc login(skissm.login_request) returns (skissm.response_data) {}
    rpc logout(skissm.logout_request) returns (skissm.response_data) {}

    rpc registerUser(skissm.register_user_request_payload) returns (skissm.response_data) {}
    rpc deleteUser(skissm.delete_user_request_payload) returns (skissm.response_data) {}

    rpc getPreKeyBundle(skissm.get_pre_key_bundle_request_payload) returns (skissm.response_data) {}
    rpc publishSPK(skissm.publish_spk_request_payload) returns (skissm.response_data) {}
    rpc sendOne2OneMsg(skissm.e2ee_message) returns (skissm.response_data) {}

    rpc createGroup(skissm.create_group_request_payload) returns (skissm.response_data) {}
    rpc addGroupMembers(skissm.add_group_members_request_payload) returns (skissm.response_data) {}
    rpc removeGroupMembers(skissm.remove_group_members_request_payload) returns (skissm.response_data) {}
    rpc getGroup(skissm.get_group_request_payload) returns (skissm.response_data) {}
    rpc sendGroupMsg(skissm.e2ee_message) returns (skissm.response_data) {}

    rpc getEventData(skissm.event_data_request) returns (skissm.response_data) {}
}