/*
 * Copyright Â© 2020-2021 by Academia Sinica
 *
 * This file is part of SKISSM.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SKISSM is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SKISSM.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "ProtoCmds";

enum proto_cmds {
    register_user_request = 0;
    register_user_response = 4097;
    get_pre_key_bundle_request = 2;
    get_pre_key_bundle_response = 4099;
    publish_spk_request = 4;
    publish_spk_response = 4101;
    supply_opks_request = 6;
    supply_opks_response = 4103;
    invite_request = 8;
    invite_response = 4105;
    accept_request = 10;
    accept_response = 4107;
    create_group_request = 12;
    create_group_response = 4109;
    get_group_request = 14;
    get_group_response = 4111;
    add_group_members_request = 16;
    add_group_members_response = 4113;
    remove_group_members_request = 18;
    remove_group_members_response = 4115;
    send_one2one_msg_request = 20;
    send_one2one_msg_response = 4117;
    send_group_msg_request = 22;
    send_group_msg_response = 4119;
    get_client_heartbeat_request = 96;
    get_client_heartbeat_response = 4193;
    get_server_heartbeat_request = 98;
    get_server_heartbeat_response = 4195;
}